@@ -14,8 +14,9 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
                 }
             }
         }
-        project.tasks.named('test').configure {
-            dependsOn project.tasks.named('compileIntegrationTestJavaJava')
+        project.tasks.named('check').configure {
+            dependsOn project.tasks.matching { it.name == 'compileIntegrationTestJavaJava' }
+            dependsOn project.tasks.matching { it.name == 'spotbugsIntegrationTestJava' }
         }
 
         project.configurations {
@@ -41,14 +42,8 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
 
             outputs.upToDateWhen { false }
 
-            //This allows to set up a `gradle.properties` file inside the connector folder to reduce number of threads and reduce parallelization.
-            //Specially useful for connectors that shares resources (like Redshift or Snowflake).
-            ext.numberThreads = project.hasProperty('numberThreads') ? project.getProperty('numberThreads') as int : Runtime.runtime.availableProcessors() ?: 1
-            maxHeapSize = '3g'
-            maxParallelForks = numberThreads
-
-            // This is needed to make the destination-snowflake tests succeed - https://github.com/snowflakedb/snowflake-jdbc/issues/589#issuecomment-983944767
-            jvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
+            maxParallelForks = project.test.maxParallelForks
+            maxHeapSize = project.test.maxHeapSize
 
             systemProperties = [
                 // Allow tests to set @Execution(ExecutionMode.CONCURRENT)
@@ -56,9 +51,8 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
             ]
         }
         integrationTestJava.configure {
-            mustRunAfter project.tasks.named('test')
+            mustRunAfter project.tasks.named('check')
             dependsOn project.tasks.matching { it.name == 'assemble' }
-            dependsOn project.tasks.matching { it.name == 'spotbugsMain' }
         }
     }
 }
